refactor more strings

--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -125,15 +125,11 @@
     <string name="following_member">Following member</string>
     <string name="user_profile">User Profile</string>
     <string name="member_since">Member since</string>
-    <string name="your_friends_title">Your Friends</string>
-    <string name="your_friends_search_hint">Search your friends</string>
-    <string name="your_friends_request">Friend requests</string>
+    <string name="friends_title">Your Friends</string>
+    <string name="friends_search">Search your friends</string>
     <string name="time_info_player">%1$tM:%1$tS / %2$tM:%2$tS</string>
     <string name="offline">Offline</string>
     <string name="friend_request_pending">Friend Request Pending</string>
-    <string name="request_pending">Request Pending</string>
-    <string name="search_your_friends">Search your friends</string>
-    <string name="friends_list">Friends List</string>
     <string name="try_again_latter">Error. Try again later.</string>
     <string name="enter_friend_name_invite">Enter friend name to invite.</string>
     <string name="remove_friend">Unfriend</string>
@@ -215,13 +211,13 @@
     <string name="chat_with_friends_login"> Chat with friends.</string>
     <string name="chat_friends_in_chat">Friends in Chat</string>
     <string name="chat_friend_in_chat">1 Friend in Chat</string>
-    <string name="chat_choose_option">Choose option</string>
-    <string name="chat_choose_from_library">Choose from library</string>
-    <string name="chat_use_camera">Use Camera</string>
+    <string name="choose_option">Choose option</string>
+    <string name="from_library">Choose from library</string>
+    <string name="use_camera">Use Camera</string>
     <string name="chat_no_changes">There are no changes in this chat.</string>
     <string name="chats">Chats</string>
-    <string name="public_chats">Public chats</string>
-    <string name="public_chats_search">Search Public Chats</string>
+    <string name="chats_public">Public chats</string>
+    <string name="chats_public_search">Search Public Chats</string>
     <string name="add_new_chat">ADD NEW CHAT</string>
     <string name="message_hint">Enter your message here…</string>
     <string name="chat_friends_add">Add friends to this chat</string>
@@ -245,10 +241,10 @@
     <string name="call_start">Start Call</string>
     <string name="call_starting">Starting New Call</string>
     <string name="call_add_member">Add To Call</string>
+    <string name="accept_call">Accept the call?</string>
     <string name="call_receive">Receiving a call from</string>
     <string name="chats_search">Search public chats</string>
     <string name="video_chat_max">Sorry, you can only video call with a maximum of 3 friends, and this call is already full!</string>
-    <string name="accept_call">Accept the call?</string>
     <string name="video_chats">Video chats</string>
     <string name="cant_start_video">Can\'t start video.</string>
     <string name="friends_in_video_chat">Friends in Video Chat</string>
