--- a/SportsSideKick/app/src/main/res/values-bh/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-bh/strings.xml
@@ -123,8 +123,8 @@
     <!--<string name="time_info_player" translatable="false">%1$tM:%1$tS / %2$tM:%2$tS</string>-->
 
     <!--&lt;!&ndash; video chat &ndash;&gt;-->
-    <!--<string name="video_chat_text_1"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>-->
-    <!--<string name="video_chat_text_1_phone">Watch the match with your <font color="#c3ff01">friends.</font></string>-->
+    <!--<string name="video_chat_promo_1"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>-->
+    <!--<string name="video_chat_promo_1_phone">Watch the match with your <font color="#c3ff01">friends.</font></string>-->
 
     <!--<string name="video_chat_text_2">-->
         <!--Video chat allows you to call up to 3 friends for a\n-->
