--- a/SportsSideKick/app/src/main/res/values-de/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-de/strings.xml
@@ -85,7 +85,7 @@
     <!--<string name="your_friends_request">Freundschaftsanfragen</string>-->
 
     <!--&lt;!&ndash; video chat &ndash;&gt;-->
-    <!--<string name="video_chat_text_1">Watch the match with your <font color="#c3ff01">friends.</font></string>-->
+    <!--<string name="video_chat_promo_1">Watch the match with your <font color="#c3ff01">friends.</font></string>-->
     <!--<string name="video_chat_text_2">Video-Anrufe funktionieren leider nur mit maximal 3 Freunden, und dieser Anruf ist bereits belegt!</string>-->
     <!--<string name="video_chat_button_text">Deinen Anruf Starten</string>-->
     <!--<string name="starting_new_call_search_hint">Nach öffentlichen Chats suchen</string>-->
