--- a/SportsSideKick/app/src/main/res/values-es/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-es/strings.xml
@@ -87,7 +87,7 @@
     <!--<string name="your_friends_request">Friend requests</string>-->
 
     <!--&lt;!&ndash; video chat &ndash;&gt;-->
-    <!--<string name="video_chat_text_1"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>-->
+    <!--<string name="video_chat_promo_1"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>-->
     <!--<string name="video_chat_text_2">Video chat allows you to call up to 3 friends for group video chat, so you can experience the action with the poeple you love wherever you are!</string>-->
     <!--<string name="video_chat_button_text">Begin your call</string>-->
     <!--<string name="starting_new_call_search_hint">Search public chats</string>-->
