--- a/SportsSideKick/app/src/main/res/values-fr/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-fr/strings.xml
@@ -96,7 +96,7 @@
     <!--<string name="time_info_player">%1$tM:%1$tS / %2$tM:%2$tS</string>-->
 
     <!--&lt;!&ndash; video chat &ndash;&gt;-->
-    <!--<string name="video_chat_text_1">Watch the match with your <font color="#c3ff01">friends.</font></string>-->
+    <!--<string name="video_chat_promo_1">Watch the match with your <font color="#c3ff01">friends.</font></string>-->
     <!--<string name="video_chat_text_2">Video chat allows you yo call up to 3 friends for group video chat, so you can experience the action with the poeple you love wherever you are!</string>-->
     <!--<string name="video_chat_button_text">Being your call</string>-->
     <!--<string name="starting_new_call_search_hint">Chercher dans les discussions publiques</string>-->
