--- a/SportsSideKick/app/src/main/res/values-zh/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-zh/strings.xml
@@ -108,8 +108,8 @@
     <!--<string name="your_statement">您的对账单</string>-->
     <!--<string name="member_since">初次订阅时间</string>-->
     <!--<string name="following_member">Following member(nt)</string>-->
-    <!--<string name="video_chat_text_1"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.(nt)</font>]]></string>-->
-    <!--<string name="video_chat_text_1_phone">Watch the match with your <font color="#c3ff01">friends.(nt)</font></string>-->
+    <!--<string name="video_chat_promo_1"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.(nt)</font>]]></string>-->
+    <!--<string name="video_chat_promo_1_phone">Watch the match with your <font color="#c3ff01">friends.(nt)</font></string>-->
     <!--<string name="video_chat_text_2">-->
     <!--Video chat allows you to call up to 3 friends for a\n-->
     <!--group video chat, so you can experience the action\n-->
