--- a/SportsSideKick/app/src/main/res/values-es/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-es/strings.xml
@@ -248,7 +248,7 @@
     <!--<string name="wallet">Wallet</string>-->
     <!--<string name="edit_your_profile">Edit Your Profile</string>-->
     <!--<string name="done">Done</string>-->
-    <!--<string name="language">Language:</string>-->
+    <!--<string name="language">Language</string>-->
     <!--<string name="phone">Phone:</string>-->
     <!--<string name="user_name">User Name:</string>-->
     <!--<string name="last_name">Last Name:</string>-->
