remove more unused strings

--- a/SportsSideKick/app/src/main/res/values-ar/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ar/strings.xml
@@ -241,7 +241,7 @@
     <!--<string name="language_current">عربى</string>-->
 
     <!--<string name="to_access_full_features">للحصول على كافة الميزات...</string>-->
-    <!--<string name="try_again_latter">الرجاء المحاولة مجدداً!</string>-->
+    <!--<string name="try_again_later">الرجاء المحاولة مجدداً!</string>-->
     <!--<string name="tutorial_earn">اضغط هنا لتربح لعرض هذه الكيفية!</string>-->
     <!--<string name="unnamed_chat">غير مسمى</string>-->
     <!--<string name="unfriend_confirm">إزالة صديق سيوقف متابعتكما لبعضكم</string>-->
