--- a/SportsSideKick/app/src/main/res/values-pl/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-pl/strings.xml
@@ -153,7 +153,7 @@
     <!--<string name="chat_choose_from_library">Choose from library</string>-->
     <!--<string name="chat_use_camera">Use Camera</string>-->
     <!--<string name="chat_no_changes">There are no changes in this chat.</string>-->
-    <!--<string name="try_again_latter">Error. Try again later.</string>-->
+    <!--<string name="try_again_later">Error. Try again later.</string>-->
     <!--<string name="enter_friend_name_invite">Enter friend name to invite.</string>-->
     <!--<string name="enter_valid_password_and_display_name">Please enter valid password and displayName!</string>-->
     <!--<string name="login_try_again">Please re-enter your password and try again</string>-->
